fix(ui): align consent checkbox vertically with text

--- a/src/scss/_hero.scss
+++ b/src/scss/_hero.scss
@@ -79,7 +79,7 @@
     input[type="checkbox"] {
         appearance: none;
         background-color: var(--card-bg);
-        margin: 4px 0 0 0;
+        margin: 1px 0 0 0;
         font: inherit;
         color: currentColor;
         width: 18px;
